<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:layout_weight="1"
    tools:context=".MainActivity"
    android:orientation="horizontal">


    <Button
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:layout_marginStart="50dp"
        android:text="@string/prev" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="50dp"
        android:text="@string/next1" />

    <Button
        android:id="@+id/random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="50dp"
        android:text="@string/random1"/>
<!--    <TextView-->
<!--        android:id="@+id/imageView1_dsc"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="425dp"-->
<!--        android:layout_marginStart="185dp"-->
<!--        android:text="@string/_1_of_4" />-->

    <ViewFlipper
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/viewFlipper">
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="-50dp"
            android:contentDescription="@string/_1_of_4"
            android:src="@drawable/image1" />
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="-50dp"
            android:src="@drawable/image2"
            android:contentDescription="@string/_2_of_4" />
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="-50dp"
            android:src="@drawable/image3"
            android:contentDescription="@string/_3_of_4" />
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="-50dp"
            android:src="@drawable/image4"
            android:contentDescription="@string/_4_of_4" />
    </ViewFlipper>

    <ViewFlipper
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/viewFlipper2">
    <TextView
        android:id="@+id/imageView1_dsc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="425dp"
        android:layout_marginStart="185dp"
        android:text="@string/_1_of_4" />
    <TextView
        android:id="@+id/imageView2_dsc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="425dp"
        android:layout_marginStart="185dp"
        android:text="@string/_2_of_4" />
    <TextView
        android:id="@+id/imageView3_dsc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="425dp"
        android:layout_marginStart="185dp"
        android:text="@string/_3_of_4" />
    <TextView
        android:id="@+id/imageView4_dsc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="425dp"
        android:layout_marginStart="185dp"
        android:text="@string/_4_of_4" />
    </ViewFlipper>
</RelativeLayout>

